# Neo_robot

./: Create_model_from_scratch.md  README.md  RiveScript.md  RiveScript.txt  bonjour.txt
HYDRO/New_qbo_urdf/: autonome.launch~  gmapping_demo.launch~  manifest.xml  manifest.xml~  qbo_amcl.launch~  qbo_nav_setup_rviz.vcg
HYDRO/qbo_arduqbo/: default_with_sensors_dynamixel.yaml
HYDRO/qbo_camera/: left-camera.yaml  right-camera.yaml
HYDRO/qbo_description/: CMakeLists.txt  package.xml  params.launch  setup_rviz.rviz  test.launch~
HYDRO/qbo_energy/: README  manifest.xml
HYDRO/qbo_navigation/: autonome.launch  manifest.xml  nav_rviz.vcg~  neo.launch~  qbo_amcl.launch  qbo_gmapping.launch~
HYDRO/qbo_object_recognition/: postinst
HYDRO/qbo_patrouille/: mainpage.dox  manifest.xml
HYDRO/qbo_talk/: CMakeLists.txt  README  manifest.xml  manifest.xml~  readme~
INDIGO/: README.md
INDIGO/face_recognition/: CMakeLists.txt  README  train.txt
INDIGO/qbo_ai/: CMakeLists.txt  README.md  neo_ai_fr.brn  package.xml
INDIGO/qbo_alive/: CMakeLists.txt  package.xml  readme.md
INDIGO/qbo_arduqbo/: CMakeLists.txt  README.md  package.xml  qbo_default_config.yaml
INDIGO/qbo_arduqbo/include/: qbo_arduqbo.h
INDIGO/qbo_arduqbo/include/controllers/: base_controller.h  battery_controller.h  controllers_class.h  imu_controller.h  lcd_controller.h  mics_controller.h  mouth_controller.h  nose_controller.h  srf10_controller.h
INDIGO/qbo_arduqbo/include/driver/: arduqbo_instructions.h  qboduino_driver.h
INDIGO/qbo_arduqbo/launch/: qbo_arduqbo_default.launch
INDIGO/qbo_arduqbo/src/: qbo_arduqbo.cpp  servos.cpp
INDIGO/qbo_arduqbo/src/controllers/: base_controller.cpp  battery_controller.cpp  imu_controller.cpp  joint_controller.cpp  lcd_controller.cpp  mics_controller.cpp  mouth_controller.cpp  nose_controller.cpp  srf10_controller.cpp
INDIGO/qbo_arduqbo/src/driver/: qboduino_driver.cpp
INDIGO/qbo_ask_wiki/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_audio_control/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_audio_control/launch/: audio_control_listener.launch
INDIGO/qbo_ball_tracker/: CMakeLists.txt  package.xml
INDIGO/qbo_brain2016/: CMakeLists.txt  package.xml  readme.md
INDIGO/qbo_camera/: CMakeLists.txt  CMakeLists.txt~  left-camera.yaml  package.xml  readme.md  right-camera.yaml
INDIGO/qbo_energy/: CMakeLists.txt  README  package.xml
INDIGO/qbo_face_detection/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_face_following/: CMakeLists.txt  README  package.xml
INDIGO/qbo_face_msgs/: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
INDIGO/qbo_face_operations/: CMakeLists.txt  package.xml
INDIGO/qbo_face_recognition/: CMakeLists.txt  README  package.xml  train.txt
INDIGO/qbo_face_tracking/: CMakeLists.txt  README  package.xml
INDIGO/qbo_hand_detector/: CMakeLists.txt  package.xml
INDIGO/qbo_hand_detector/msg/: hand_detector.msg
INDIGO/qbo_hand_detector/src/: hand_gestures_recognition.py
INDIGO/qbo_head_joystick/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_head_joystick/launch/: face_learning.launch  listen_brain.launch  listen_questions.launch  listen_small_ai.launch  listen_vocal_move.launch  neo_listen_aiml.launch  neo_listen_brain.launch  neo_listen_google.launch  qbo_head_joy.launch
INDIGO/qbo_head_joystick/msg/: head_joy.msg
INDIGO/qbo_head_joystick/src/: qbo_head_joy.py  qbo_head_joy_with_spoken_direction.py
INDIGO/qbo_internet/: CMakeLists.txt  meteo_exemple_api  meteo_icons  meteo_readme.md  package.xml
INDIGO/qbo_internet/msg/: meteo_info.msg
INDIGO/qbo_internet/src/: qbo_meteo.py  qbo_meteo_info.py
INDIGO/qbo_internet/src/not_ready_yet/: tvProgram.py
INDIGO/qbo_joy_control/: CMakeLists.txt  README.md  package.xml  params.yaml
INDIGO/qbo_joy_control/launch/: qbo_joy_ctrl.launch
INDIGO/qbo_joy_control/src/: joy_ctrl.py
INDIGO/qbo_launcher/: CMakeLists.txt  README.md  package.xml  postinst  qbo_start_service
INDIGO/qbo_listen/: CMakeLists.txt  README.md  installation  package.xml  readme_new
INDIGO/qbo_listen/config/fr/brain/: brain.dic  brain.lm  brain.voca
INDIGO/qbo_listen/config/fr/brain/brain_fr_model/: feat.params  metadata.xml  sendump
INDIGO/qbo_listen/config/fr/fr_model/lium_french_f0/: noisedict  readme.txt
INDIGO/qbo_listen/config/fr/questions/: questions.dic  questions.lm  questions.voca
INDIGO/qbo_listen/config/fr/vocal_move/: vocal_move.dic  vocal_move.lm  vocal_move.voca
INDIGO/qbo_listen/config/fr/vocal_move/vocal_move_fr_model/: feat.params  mdef  means  metadata.xml  mixture_weights  noisedict  sendump  transition_matrices  variances  vocal_move.jsgf
INDIGO/qbo_listen/launch/: neo_listen_aiml.launch  neo_listen_brain.launch  neo_listen_google.launch  neo_listen_vocal_move.launch
INDIGO/qbo_listen/src/: neo_google_listen.py  neo_listen.py
INDIGO/qbo_move/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_play_games/: CMakeLists.txt  package.xml
INDIGO/qbo_play_games/config/: HSV  searc_HSV_mask_values.py
INDIGO/qbo_play_games/config/for_qbo_listen/fr/: color_balls.dic  color_balls.lm  color_balls.voca
INDIGO/qbo_play_games/launch/: qbo_ball_colors.launch
INDIGO/qbo_play_games/msg/: ball_color.msg
INDIGO/qbo_play_games/src/: ball_color_publisher.py  color_balls_game.py  color_game_smach.py  play_notes
INDIGO/qbo_play_music/: CMakeLists.txt  package.xml  readme
INDIGO/qbo_random_move/: CMakeLists.txt  README.md  package.xml
INDIGO/qbo_return_home/: CMakeLists.txt  package.xml  readme.md
INDIGO/qbo_rivescript_ai/: CMakeLists.txt  package.xml
INDIGO/qbo_stereo_selector/: CMakeLists.txt  package.xml
INDIGO/qbo_system_info/: CMakeLists.txt  package.xml
INDIGO/qbo_talk/: CMakeLists.txt  README.md  package.xml  readme
INDIGO/qbo_vision/: CMakeLists.txt  README.md  history  package.xml
INDIGO/qbo_vision/msg/: dlib_msgs.msg  facial_detection.msg
INDIGO/qbo_vision/src/: neo_faceDetection.py
INDIGO/qbo_vocal_move/: CMakeLists.txt  package.xml  readme
In process/: README.md
In process/qbo_face_vision/: postinst
(+3739 files in other folders)
