<?xml version="1.0"?>
<package>
  <name>qbo_audio_control</name>
  <version>1.0.0</version>

  <description>
	qbo_audio_control package, catkinized package (indigo ok)
	This node disable the mic when the speaker sound is too much loud and the mic can capture it. Also control the output volume
  </description>

  <maintainer email="elpimous12@orange.fr">elpimous</maintainer>

  <license>GPL v2, LGPL v2.1</license>

  <author> Sergio Merino/s.merino@openqbo.org, Lennart Poettering/mzihzrgre (at) 0pointer (dot) de</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>

</package>
