<?xml version="1.0"?>
<package>
  <name>qbo_hand_detector</name>
  <version>0.0.0</version>
  <description>The qbo_hand_detector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="neo@todo.todo">neo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <build_depend>message_generation</build_depend> 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend> 


  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
