<?xml version="1.0"?>
<package>
  <name>qbo_internet</name>
  <version>0.0.0</version>
  <description>The qbo_internet package</description>

  <maintainer email="neo@todo.todo">neo</maintainer>

  <license>TODO</license>



    <build_depend>message_generation</build_depend> -->

    <run_depend>message_runtime</run_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  
  


  <export>


  </export>
</package>
