<?xml version="1.0"?>
<package>
  <name>qbo_vision</name>
  <version>2.0.0</version>

  <description>
	qbo_vision package,
  </description>

  <maintainer email="elpimous12@orange.fr">elpimous</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend> 

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>message_runtime</run_depend> 


  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>qbo_face_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>qbo_face_msgs</run_depend>

  <export>
  </export>
</package>
